feat: allow users to delete moments
